# opengeotech-python

./: .gitignore  DOCKER_README.md  Dockerfile  GIT_SETUP_GUIDE.md  PYPI_UPLOAD_GUIDE.md  pyproject.toml  setup.py
examples/: basic_usage.py
opengeotech/: __init__.py
