[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opengeotech"
dynamic = ["version"]
authors = [
    {name = "OpenGeotech Contributors", email = "opengeotechnical@gmail.com"},
]
description = "A simple geotechnical engineering package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/OpenGeotechnical/opengeotech-python"
"Bug Tracker" = "https://github.com/OpenGeotechnical/opengeotech-python/issues" 